--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,23 +1,22 @@
-name: Bug Report
-description: File a bug report.
-title: "[Bug]: "
-labels: ["bug", "triage"]
-projects: ["octo-org/1", "octo-org/44"]
-assignees:
-  - octocat
+name: Report a bug
+description: Report a bug or issue in Speedtest Tracker.
+title: "[Bug] "
+labels: ["🐛 bug"]
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
-  - type: input
-    id: contact
+        Thanks for taking the time to fill out this bug report! You should only use this form for issues, to request a change or feature use the [feature request form]().
+  - type: checkboxes
     attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
+      label: Pre-work
+      description: Before opening an issue make sure you've checked the resources below first, any issues that could have been solved by reading
+the docs or closed issues will be closed.
+      options:
+      - label: I have read the [docs](https://docs.speedtest-tracker.dev)
+        required: true
+      - label: I have searched existing open and closed issues
+        required: true
   - type: textarea
     id: what-happened
     attributes:
@@ -27,7 +26,8 @@ body:
       value: "A bug happened!"
     validations:
       required: true
-  - type: dropdown
+
+  - type: input
     id: version
     attributes:
       label: Version
@@ -38,6 +38,7 @@ body:
       default: 0
     validations:
       required: true
+
   - type: dropdown
     id: browsers
     attributes:
@@ -48,17 +49,10 @@ body:
         - Chrome
         - Safari
         - Microsoft Edge
+
   - type: textarea
     id: logs
     attributes:
       label: Relevant log output
       description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
       render: shell
-  - type: checkboxes
-    id: terms
-    attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com).
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
