--- a/.github/ISSUE_TEMPLATE/BUG_REPORT_FORM.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT_FORM.yml
@@ -1,6 +1,6 @@
 name: Bug report
-description: Report an issue with Speedtest Tracker.
-title: "[Bug] "
+description: Report an issue to help improve the application.
+title: "[Bug]: "
 labels: ["bug", "unverified"]
 body:
   - type: markdown
@@ -28,10 +28,18 @@ body:
     validations:
       required: true
   - type: textarea
+    id: expected-behavior
+    attributes:
+      label: Expected Behavior
+      description: In a perfect world, what should have happened?
+      placeholder: When I got to the coffee pot, it should have been full.
+    validations:
+      required: true
+  - type: textarea
     id: steps-to-reproduce
     attributes:
       label: Steps to Reproduce
-      description: Describe how to reproduce the issue.
+      description: Describe how to reproduce the issue in repeatable steps.
       placeholder: |
         1. Go to the coffee pot.
         2. Make more coffee.
@@ -41,15 +49,14 @@ body:
   - type: input
     id: version
     attributes:
-      label: Application Version
-      description: What version of Speedtest Tracker are you using?
+      label: Version
       placeholder: v1.0.0
     validations:
       required: true
   - type: input
     id: browsers
     attributes:
-      label: What browsers are you seeing the problem on?
+      label: What browser(s) are you seeing the problem on?
       placeholder: Chrome, Firefox, Safari, etc.
     validations:
       required: true
