--- a/.github/ISSUE_TEMPLATE/BUG_REPORT_FORM.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT_FORM.yml
@@ -11,19 +11,19 @@ body:
     attributes:
       label: Pre-work
       description: |
-        Before opening an issue make sure you've checked the resources below first, any issues that could have been solved by reading the docs or closed issues will be closed.
+        Before opening an issue make sure you've checked the resources below first, any issues that could have been solved by reading the docs or existing issues will be closed.
       options:
       - label: I have read the [docs]().
         required: true
       - label: I have searched existing open and closed issues.
         required: true
-      - label: I agree to follow this project's [Code of Conduct]()
+      - label: I agree to follow this project's [Code of Conduct]().
         required: true
   - type: textarea
     id: description
     attributes:
       label: Description
-      description: Describe the issue you experienced.
+      description: Explain the issue you experienced, please be clear and concise.
       placeholder: I went to the coffee pot and it was empty.
     validations:
       required: true
@@ -46,11 +46,24 @@ body:
         3. Pour it into a cup.
     validations:
       required: true
-  - type: input
-    id: version
+  - type: dropdown
+    id: deployment-environment
     attributes:
-      label: Version
-      placeholder: v1.0.0
+      label: Deployment Environment
+      description: How did you deploy the application?
+      options:
+        - Docker Compose
+        - Docker Run
+        - Bare Metal
+      default: 0
+    validations:
+      required: true
+  - type: textarea
+    id: application-information
+    attributes:
+      label: Application Information
+      description: To generate application information run `php artisan about --format=json` from the application's path. This will be automatically formatted into code, so no need for backticks.
+      render: json
     validations:
       required: true
   - type: input
