--- a/.github/workflows/stale_issues.yml
+++ b/.github/workflows/stale_issues.yml
@@ -39,7 +39,9 @@ jobs:
           stale-issue-label: '⏳ no-issue-activity'
           close-issue-label: '🔒 closed-no-issue-activity'
           
-          # Refined issue selection
-          only-issue-labels: '🐛 bug, ❓ question' # Only issues with both bug and question label
+          # Refined issue selection, Only issues with both bug and question label
+          only-issue-labels: 
+            - "🐛 bug" 
+            - "❓ question"
 
 # Issues will be closed as "Not Planned" by default. 
