--- a/.github/ISSUE_TEMPLATE/FEATURE_REQUEST_FORM.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE_REQUEST_FORM.yml
@@ -15,6 +15,19 @@ body:
         required: true
       - label: I agree to follow this project's [Code of Conduct]().
         required: true
+  - type: dropdown
+    id: idea-section
+    attributes:
+      label: "Which part of the application does your idea belong to?"
+      description: "Select the section of the application that your idea pertains to."
+      options:
+        - "Charts"
+        - "Notifications"
+        - "Speedtest"
+        - "WebGui"
+      default: 0
+    validations:
+      required: true
   - type: textarea
     id: description
     attributes:
