--- a/.github/ISSUE_TEMPLATE/BUG_REPORT_FORM.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT_FORM.yml
@@ -13,7 +13,7 @@ body:
       description: |
         Before opening an issue make sure you've checked the resources below first, any issues that could have been solved by reading the docs or existing issues will be closed.
       options:
-      - label: I have read the [docs]().
+      - label: I have read the [docs](https://docs.speedtest-tracker.dev).
         required: true
       - label: I have searched open and closed issues.
         required: true
