--- a/.github/ISSUE_TEMPLATE/BUG_REPORT_FORM.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT_FORM.yml
@@ -13,7 +13,7 @@ body:
       description: |
         Before opening an issue make sure you've checked the resources below first, any issues that could have been solved by reading the docs or existing issues will be closed.
       options:
-      - label: I have read the [docs]().
+      - label: I have read the [docs](https://docs.speedtest-tracker.dev).
         required: true
       - label: I have searched open and closed issues.
         required: true
@@ -62,7 +62,7 @@ body:
     id: application-information
     attributes:
       label: Application Information
-      description: To generate application information run `php artisan about --format=json` from the application's path. This will be automatically formatted into code, so no need for backticks.
+      description: To generate application information run `php artisan about --json` from the application's path. This will be automatically formatted into code, so no need for backticks.
       render: json
     validations:
       required: true
