--- a/.github/ISSUE_TEMPLATE/FEATURE_REQUEST_FORM.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE_REQUEST_FORM.yml
@@ -1,7 +1,7 @@
 name: Feature Request
 description: Use this template for requesting a new feature or change.
 title: "[Feature]: "
-labels: ["feature"]
+labels: ["feature", "needs-review"]
 body:
   - type: markdown
     attributes:
@@ -11,10 +11,25 @@ body:
     attributes:
       label: Pre-work
       options:
-      - label: I have searched open and closed issues to make sure this or similar feature request does not already exist.
+      - label: I have searched open and closed feature request to make sure this or similar feature request does not already exist.
+        required: true
+      - label: I have reviewed the [milestones](https://github.com/alexjustesen/speedtest-tracker/milestones) to ensure that this feature request, or a similar one, has not already been proposed.
         required: true
       - label: I agree to follow this project's [Code of Conduct]().
         required: true
+  - type: dropdown
+    id: idea-section
+    attributes:
+      label: Which part of the application does your feature belong to?
+      description: Select the section of the application that your feature pertains to.
+      options:
+        - Charts
+        - Notifications
+        - Speedtest
+        - WebGui
+      default: 0
+    validations:
+      required: true
   - type: textarea
     id: description
     attributes:
